# personal-automate

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  ruff.toml
.task/checksum/: setup
notebooks/: fran.ipynb
projects/atmos/: Atmos.py  lhsshovels2csv.py  standarCSV.py
projects/atmos/src/: Atmos.py  standarCSV.py
projects/atmos/src/core/: data.py
projects/atmos/src/state/: session.py
projects/atmos/src/ui/: calculator.py  sidebar.py  styles.py  visuals.py
projects/computer_vision/: visionMouse.py
projects/converters/: glb2obj.py
projects/geometry/: builderParam.py  builderParamEXE.py
projects/industry/: dxf_select_curves.py  lhsshovels2csv.py
projects/inventory/: procesador_gui.py
